--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgSelectFields = Select Fields 
 msgCannotWriteVista = PS.. It seems you are using Vista. Due to security restrictions in the Program Files folder it's better to install Data Crow into another directory. If you do not want to do this you should refer to the Vista documentation on how to set the access right for users on folders.
 msgCannotWrite = It seems Data Crow does not have permissions to modify files in the data directory. It's crucial that Data Crow is allowed to create and update files in this directory. Please correct this before using Data Crow.
 msgLanguageNameMustBeFilled = Please enter the name of the language.
