--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -136,7 +136,7 @@ sysImageFieldCategory=Categorie
 sysUserFieldLabel=Label
 sysMovieFieldDescription=Omschrijving
 lblLoad=Laden
-lblSave=Save
+lblSave=Opslaan
 sysMusictrackFieldYear=Jaar
 msgLoginnameIsNotAllowedToChange=De gebruikersnaam kan niet worden gewijzigd
 lblEditItemAsNew=Bewerk als nieuw
@@ -342,7 +342,7 @@ sysMusicalbum_storagemediumFieldName=Naam
 msgNoRenumbersFound=Er zijn geen nummeraars gevonden!
 lblSort=Sorteren
 msgParsingXFiles=Beginnen met het uitlezen van %1 bestanden
-lblImportDefinitions=Import Definitions
+lblImportDefinitions=Import Definities
 0x0094=Prodosy 8Kbps
 sysMusicalbumFieldWebpage=Webpagina
 sysMovieFieldPictureFront=Afbeelding voorkant
@@ -403,7 +403,7 @@ msgEnterReturnDate=Vul de retourdatum in
 sysMusicalbum_storagemediumFieldLabel=Label
 lblToggleMenuLabels=Toon Labels
 sysAudiotrackFieldCreated=Aangemaakt op
-lblSaveAs=Save as
+lblSaveAs=Opslaan als
 lblRetrieveAudioCDInfo=Haal CD Informatie op
 sysImageFieldFilename=Bestandsnaam
 sysAudiocdFieldPictureFront=Afbeelding voorkant
@@ -723,7 +723,7 @@ lblRelatedItems=Gerelateerde items
 lblWebServerPort=Draai op poort
 sysBook_storagemediumFieldCreated=Aangemaakt op
 sysMusicalbumFieldPictureCD=Afbeelding CD
-lblSaveNewFilter=Save filter
+lblSaveNewFilter=Filter opslaan
 msgError=Er heeft zich een probleem voorgedaan
 lblContinue=Doorgaan
 lblAfter=After
@@ -884,7 +884,7 @@ msgFieldWithSameNameExists=Er bestaat reeds een veld met dezelfde naam. Kies een
 sysImage_stateFieldName=Naam
 sysContainer_containertypeFieldCreated=Aangemaakt op
 msgCannotWrite=Het lijkt erop dat Data Crow niet mag schrijven in de data directorie. Het is van cruciaal belang dat Data Crow bestaande bestanden mag bewerken en nieuwe mag aanmaken. Corrigeer dit voordat u met Data Crow aan de slag gaat,
-lblMaxTextLength=Maximum Text Length
+lblMaxTextLength=Maximum Tekst Lengte
 sysBook_storagemediumItemPlural=Opslagmedia
 sysSoftwareFieldEAN=EAN
 msgThereAreOverdueItems=Er zijn items waarvan de uiterste reourdatum is verstreken
@@ -892,7 +892,7 @@ lblField=Field
 sysMovieFieldFps=Fps
 msgCouldNotDeleteModule=De module kan niet worden verwijdered of een van de gerelateerde modules kon niet worden bijgewerkt. De verwijderen is geannuleerd. %1
 sysSoftwarepublisherFieldUserShortText1=Gebruikersveld - Text kort 1
-lblExpandAll=Expand all
+lblExpandAll=Alle uitklappen
 tpProgramDefinitions=Definieer applicaties voor de diverse bestandstype
 lblRetrieveValues=Op te halen informatie
 msgNoResultsForKeywords=Geen resultaat gevonden voor %1
@@ -995,7 +995,7 @@ lblVerification=Verificatie
 lblPersonOrginalOrder=Orginele volgorde
 0x0040=Antex Electronics G.721
 tpRunSQL=Start the SQL query zoals ingevuld in het SQL veld
-msgAddedXItemsToView=% items worden toegevoegd aan het overzicht. Druk op save om deze op te slaan.
+msgAddedXItemsToView=% items worden toegevoegd aan het overzicht. Druk op opslaan om deze op te slaan.
 sysMusicalbum_stateFieldModified=Aangepast op
 sysBookFieldUserInteger1=Gebruikersveld - Numeriek 1
 lblInternetServer=Server
@@ -1122,8 +1122,8 @@ msgApplicationStops=Data Crow is gracefully shutting down.
 lblDirectoriesFiles=Directories / Bestanden
 sysAuthorFieldUserShortText2=Gebruikersveld - Text kort 2
 sysAudiocdFieldLendBy=Geleend door
-lblNewItem=New %1
-msgNoPatternEntered=No pattern has been entered!
+lblNewItem=Nieuwe %1
+msgNoPatternEntered=Er is geen pattern gedefinieerd!
 sysSuperFieldUserShortText2=Gebruikersveld - Text kort 2
 msgReportNoItems= Er zijn geen items aanwezig die aan het rapport kunnen worden toegevoegd.
 msgFileRenamingError=Er is een fout opgetreden tijdens het hernoemen van het bestand: %1.
@@ -1144,7 +1144,7 @@ sysMusicgenreItemPlural=Muziek Genres
 lblKey=Sleutel
 sysMusicartistFieldID=ID
 sysAudiocdFieldDueDate=Uiterste retourdatum
-lblToggleModuleList=(De-)Activeer Module Lijst
+lblToggleModuleList=(De-) Activeer Module Lijst
 sysImageFieldUserInteger1=Gebruikersveld - Numeriek 1
 msgCouldNotReadFromURL=Could not read from %1. (%2).
 sysImage_storagemediumFieldModified=Aangepast op
@@ -1267,7 +1267,7 @@ sysMovieFieldwebpage=Webpagina
 msgReadingFrom=Busy reading from %1
 sysMovieFieldserviceurl=Service URL
 sysSoftwareFieldDescription=Omschrijving
-lblNew=New
+lblNew=Nieuw
 sysAudiocdFieldRating=Beoordeling
 sysMusictrack_stateFieldCreated=Aangemaakt op
 sysAuthorItem=Auteur
@@ -1713,3 +1713,6 @@ lblNoLF=Default van het systeem
 sysBookFieldVolumeNumber=Volume (nr)
 sysPersonFieldCity=Stad
 lblRestore=Terugzetten
+msgSelectFields=Selecteer velden
+lblPresentationReport = Presentatie rapport
+lblDataReport = Data export
