*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,4 @@
+lblFontAntiAliasing=Font Anti-aliasing
 lblDataReport = Create a data report / export
 lblPresentationReport = Create a presentation report
 lblBasedOn = Based on
