--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -30,7 +30,7 @@ sysImageItem=Afbeelding
 sysActorFieldID=ID
 0x0020=Yamaha ADPCM
 sysSoftwareFieldID=ID
-lblLanguage=Language
+lblLanguage=Taal
 sysSoftware_platformFieldIcon=Icoon
 sysMusicalbumFieldYear=Jaar
 sysMovieFieldID=ID
@@ -391,7 +391,7 @@ sysBookFieldID=ID
 lblSkinLF=Skin Look & Feel Themes
 0x0018=MediaVision ADPCM
 sysAudiocdFieldState=Status
-lblFinish=Afsluiten
+lblFinish=Voltooien
 sysPerson_categoryItemPlural=Categoriën
 sysContainerItem=Container
 0x0400=BTV Digital
@@ -558,13 +558,13 @@ sysImageFieldImage=Afbeelding
 sysImageFieldCamera=Camera
 msgSelectFiles=Selecteer de bestanden die geimporteerd moeten worden
 lblDecimalGroupingSymbol=Duizendtal scheidingsteken
-lblChangePassword=Change password
+lblChangePassword=Wachtwoord wijzigen
 0x6750=Ogg Vorbis 2
 lblQuit=Afsluiten
 lblDecimalSeperatorSymbol=Decimaal scheidingsteken
 lblClear=Legen
 sysDeveloperFieldDescription=Omschrijving
-lblModuleCreateWizard=Create Module Wizard
+lblModuleCreateWizard=Creëer Module Wizard
 sysMusicalbumFieldModified=Aangepast op
 0x0042=MSG723
 sysUserFieldEnabled=Actief
@@ -650,7 +650,7 @@ sysStorageMedium=Opslagmedium
 sysMusicartistFieldserviceurl=Service URL
 lblForceTemplate=Force template values
 sysMusicartistFieldUserInteger2=Gebruikersveld - Numeriek 2
-lblCardView=Kaartoverzicht
+lblCardView=Kaart overzicht
 lblGroupBy=Groeperen
 0x0133=Sipro G729
 lblHelp=Help
@@ -820,8 +820,8 @@ sysImage_storagemedium=Opslagmedium
 lblWebServerControl=Web Server beheer
 sysAuthor=Auteurs
 0x0039=Roland RDAC
-msgInternetSearch=Deze stap maakt gebruikt van de online zoek functionaliteit. Vul een zoekterm in en druk op enter om het zoeken te starten. Indie geen resultaat wordt gevonden kunt een nieuwe zoekterm invoeren of, als het item simpelweg niet te vinden is, de wizard afsluiten.
-lblDescriptive=Descriptive?
+msgInternetSearch=Deze stap maakt gebruikt van de online zoek functionaliteit. Vul een zoekterm in en druk op enter om het zoeken te starten. Indien geen resultaat wordt gevonden kunt een nieuwe zoekterm invoeren of, als het item simpelweg niet te vinden is, de wizard afsluiten.
+lblDescriptive=Omschrijvend?
 sysMusicalbumFieldContainer=Container
 sysImageFieldDaysLoaned=Dagen uitgeleend
 msgTableUpgradeIncorrectColumn=Tabel %1 moet worden bijgewerkt. Kolom %2 heeft een incorrecte maximum lengte.
@@ -830,7 +830,7 @@ lblAddField=Veld toevoegen
 sysBookItemPlural=Boeken
 sysContainerFieldName=Naam
 sysDirectorFieldCreated=Aangemaakt op
-lblInputFieldHeight=Input Field Height
+lblInputFieldHeight=Invoerveld Hoogte
 lblReferencedModule=Gerelateerde Module
 msgNoChangesToSave=Er zijn geen veranderingen om op te slaan
 sysMovieFieldVideoCodec=Video Codec
@@ -870,7 +870,7 @@ sysSoftware_stateFieldModified=Aangepast op
 lblOpenReport=Open Rapport
 msgNoFieldsFound=Er zijn geen velden gedefinieerd. Selecteer eerst een bronbestand en leg links tussen de bron velden en de Data Crow velden.
 sysMusicalbum_stateFieldItem=Item
-lblEndsWith=Ends With
+lblEndsWith=Eindigt op
 msgErrorWhileOpeningX=Er is een foutopgetreden bij het openen van het bestand %1: %2
 0x0024=Audiofile AF36
 lblHoldsTechnicalInfo=Bevat technische informatie?
@@ -911,6 +911,7 @@ msgOutOfMemory=Er is onvoldoende geheugen beschikbaar om alle items te laden.
 lblInvertSelection=Selectie Omdraaien
 sysSoftware_storagemediumFieldCreated=Aangemaakt op
 sysImageFieldCompression=Compressie (Bits)
+lblFontAntiAliasing=Anti-aliasing voor Lettertypes
 lblPickADate=Selecteer een datum
 msgSelectModuleTypeFirst=Selecteer de module type
 lblRenumberAll=Hernummer alle items
@@ -1104,7 +1105,7 @@ msgSearchResult=De zoekactie heeft %1 items opgeleverd
 msgNotSaved=Niet alle veranderingen zijn opgeslagen. Weet u zeker dat u wilt afsluiten?
 sysMovieFieldGenres=Genres
 lblAuthorized=Geautoriseerd
-lblEvenColor=Kleur voor gelijke rijen
+lblEvenColor=Even kleur
 sysMovie_storagemediumFieldCreated=Aangemaakt op
 sysTemplatePlural=Templates
 lblDoesNotContain=Bevat niet
@@ -1220,7 +1221,7 @@ sysSoftwarepublisherItemPlural=Uitgevers
 sysPersonFieldUserShortText2=Gebruikersveld - Text kort 2
 msgLanguageWithNameAlreadyExists=Er bestaat al een taal met de opgegeven naam. Vul een unieke naam in
 lblToggleQuickFilterBar=(De-) Activeer Snelzoek Balk
-lblFindAgain=Re-apply Filter
+lblFindAgain=Filter opnieuw
 tpFontSize=Verandert de grootte van het lettertype
 lblTableColorSettings=Overzichts kleuren
 sysMovieItemPlural=Films
@@ -1239,9 +1240,9 @@ msgIncompleteRestore=Niet alle bestonden konden worden teruggezet. Controleer de
 msgDiscMounted=Drive %1 is toegevoegd. De scan wordt gestart.
 sysBookpublisherFieldUserShortText1=Gebruikersveld - Text kort 1
 lblSourceName=Bronnaam
-lblWords=Worden
+lblWords=Woorden
 sysSoftwareFieldYear=Jaar
-sysSoftwareFieldScreenshotTwo=Screenshot Twee
+sysSoftwareFieldScreenshotTwo=Schermafbeelding 2
 lblStorageMedium=Opslagmedium
 sysContainerFieldUserShortText2=Gebruikersveld - Text kort 2
 tpSaveChanges=Sla alle wijzigen op
@@ -1470,7 +1471,7 @@ sysSuperFieldDaysLoaned=Dagen uitgeleend
 sysStorageMediumPlural=Opslagmedia
 lblItems=Items
 sysPermissionFieldItem=Item
-lblUndoSearch=Huiige filter de-activeren
+lblUndoSearch=Huidige filter de-activeren
 sysDeveloperFieldserviceurl=Service URL
 lblUseDirAsArtistName=Gebruik directory naam als de artiest naam
 sysMovie=Film
