*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -200,6 +200,7 @@ lblPluginPermissions=Plugin Permissies
 msgSelectRowToOpen=Selecteer eerst een item om te openen
 sysBookFieldUserLongText1=Gebruikersveld - Text lang
 sysImageFieldHeight=Hoogte
+lblHeight=Hoogte
 lblLeft=Links
 lblDatabaseDriver=Database Driver
 lblGoToTheWebApp=Open de web applicatie
@@ -367,7 +368,7 @@ sysCategoryPlural=Categorien
 msgNoItemsToRename=Er zijn geen items aanwezig die hernoemt kunnen worden of de items bevatten niet de benodigde informatie. 
 sysMusicalbumItemPlural=Muziek Albums
 sysMusictrackFieldFilesize=Bestandsgrootte
-sysPerson=Contact Persoon
+sysPerson=Contact Personen
 sysDeveloperFieldPhoto=Foto
 sysMusicalbum_storagemediumFieldIcon=Icoon
 lblClearTable=Tabel legen
@@ -454,7 +455,7 @@ lblFileField=Bestandsveld
 sysImageFieldFilesize=Bestandsgrootte
 sysBook_stateItem=Status
 sysUserFieldUser=Gebruiker
-lblWidth=Width
+lblWidth=Breedte
 sysMusicalbumFieldPictureBack=Afbeelding Achterkant
 lblApply=Toepassen
 sysBookFieldFilehashType=Bestandshash Type
