*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -463,6 +463,7 @@ lblProxyServerPort = Proxy Server port
 lblProxyUserName = Proxy username
 lblProxyPassword = Proxy Password
 lblLoginname = Login name
+lblLogin = Login
 lblPassword = Password
 lblHTTPSettings = HTTP Settings
 lblVerification = Verification
