--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -369,6 +369,7 @@ msgNoItemsToRename=Er zijn geen items aanwezig die hernoemt kunnen worden of de 
 sysMusicalbumItemPlural=Muziek Albums
 sysMusictrackFieldFilesize=Bestandsgrootte
 sysPerson=Contact Personen
+lblLogin = Aanmelden
 sysDeveloperFieldPhoto=Foto
 sysMusicalbum_storagemediumFieldIcon=Icoon
 lblClearTable=Tabel legen
