*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgMemory64MB = Data Crow has too less memory allocated by Java (%1 MB). This will cause Data Crow to become very sluggish! You should consider to allow Data Crow to use more memory. This can be done by starting Data Crow in the following way: java -Xmx256m -jar datacrow.jar
 msgSelectFields = Select Fields 
 msgCannotWriteVista = PS.. It seems you are using Vista. Due to security restrictions in the Program Files folder it's better to install Data Crow into another directory. If you do not want to do this you should refer to the Vista documentation on how to set the access right for users on folders.
 msgCannotWrite = It seems Data Crow does not have permissions to modify files in the data directory. It's crucial that Data Crow is allowed to create and update files in this directory. Please correct this before using Data Crow.
@@ -198,7 +199,7 @@ msgConnectingToServer = Connecting to server : %1
 msgCouldNotReadDiscID = Could not read the Disc ID. Either there is no disc in the CD-ROM drive or it cannot be recognized.
 msgErrorDiscID = An error occurred while trying to get the Disc ID: %1
 msgFoundDiscID = Found disc id: %1
-msgNotSaved = There are unsaved changes. Do you want to save now ?
+msgNotSaved = There are unsaved changes. Do you want to save now?
 msgCouldNotCreateCacheForPicture = Unable to create cached picture! Picture is discarded
 msgCouldNotLoadPicture = Could not load picture
 msgCouldNotClearCache = Could not clear the cache directory
