--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+msgMemory64MB=Data Crow heeft weinig geheugen toegeweze gekregen (%1 MB). Dit kan Data Crow erg traag maken. U kunt Data Crow meer geheugen toewijzen door Data Crow als volgt op te starten: java -Xmx256m -jar datacrow.jar
 sysUserFieldName=Naam
 sysSoftwareFieldScreenshotThree=Schermafbeelding 3
 msgMassUpdateMethodHasNotBeenDefined=Selecteer een online service en/of geef aan bestanden opnieuw te willen verwerken
@@ -444,7 +445,7 @@ sysImage_state=Status
 sysDeveloperFieldModified=Aangepast op
 0x6771=Ogg Vorbis 3 Plus
 sysMusictrack=Muziek Tracks
-msgUpgradedModuleXAltered=% module is bijgewerkt. Veld %2 is verandert
+msgUpgradedModuleXAltered=%1 module is bijgewerkt. Veld %2 is verandert
 msgImportSettingsExplanation=Deze instellingen bepalen of en hoe lokale afbeeldingen worden geimporteerd. Met lokale afbeeldingen worden fysieke afbeeldingen bedoelt die zich in de directories bevinden van de te importeren bestanden. De sleutelwoorden moeten worden gescheiden door komma's 
 sysPermissionFieldField=Veld
 sysPerson_categoryFieldLabel=Label
@@ -600,7 +601,7 @@ msgItemIsAvailable=Het item is beschikbaar en kan worden uitgeleend
 sysImageFieldLabel=Label
 msgFileDoesNotExist=Bestand '%1' bestaat niet.
 sysImage_stateFieldModified=Aangepast op
-lblApplyFilter=Re-apply Filter
+lblApplyFilter=Filter Opnieuw
 sysUserItemPlural=Gebruikers
 0x0450=QDesign Music
 sysDeveloperFieldFirstname=Voornaam
@@ -1104,7 +1105,7 @@ lblBar=Balk
 tpUpdate=Gebruik het geselecteerde zoek resultaat om het item bij te werken
 sysMusicgenreFieldItem=Item
 msgSearchResult=De zoekactie heeft %1 items opgeleverd
-msgNotSaved=Niet alle veranderingen zijn opgeslagen. Weet u zeker dat u wilt afsluiten?
+msgNotSaved=Niet alle veranderingen zijn opgeslagen. Wilt u deze nu opslaan?
 sysMovieFieldGenres=Genres
 lblAuthorized=Geautoriseerd
 lblEvenColor=Even kleur
