*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,10 @@
+msgLoadingModules = Loading modules
+msgInitializingDB = Initializing database
+msgLoadingItems = Loading items
+msgLoadingUI = Creating the GUI
+msgStartingWebServer = Starting the web server
+msgCloseWebServerConsole = Press CTRL-C to, gracefully, bring the server down
+msgWebServerStartUnauthorized = You are not authorized to start the Web Server. Data Crow will now exit!
 msgMemory64MB = Data Crow has too less memory allocated by Java (%1 MB). This will cause Data Crow to become very sluggish! You should consider to allow Data Crow to use more memory. This can be done by starting Data Crow in the following way: java -Xmx256m -jar datacrow.jar
 msgSelectFields = Select Fields 
 msgCannotWriteVista = PS.. It seems you are using Vista. Due to security restrictions in the Program Files folder it's better to install Data Crow into another directory. If you do not want to do this you should refer to the Vista documentation on how to set the access right for users on folders.
