--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,10 @@
+msgLoadingModules=Laden van de Modules
+msgInitializingDB=Database wordt gecontroleerd en gestart
+msgLoadingItems=Items worden geladen
+msgLoadingUI=Het scherm wordt opgebouwd
+msgStartingWebServer=De web server wordt gestart
+msgCloseWebServerConsole=Druk op CTRL-C om de server (netjes) af te sluiten
+msgWebServerStartUnauthorized=U bent niet geautoriseerd om de web server te starten, Data Crow wordt nu afgesloten!
 msgMemory64MB=Data Crow heeft weinig geheugen toegeweze gekregen (%1 MB). Dit kan Data Crow erg traag maken. U kunt Data Crow meer geheugen toewijzen door Data Crow als volgt op te starten: java -Xmx256m -jar datacrow.jar
 sysUserFieldName=Naam
 sysSoftwareFieldScreenshotThree=Schermafbeelding 3
