*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -818,7 +818,7 @@ sysSoftwarepublisherFieldLabel=Label
 sysAudiotrack=Audio Tracks
 lblPictureFront=Afbeelding voorkant
 sysActorFieldserviceurl=Service URL
-lblClose=Afsluiten
+lblClose=Sluiten
 sysSoftware_storagemediumFieldModified=Aangepast op
 sysMusicalbum_state=Status
 sysAudiotrackFieldDescription=Omschrijving
