*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,6 @@
+msgShutdownComplete = Shutdown has been completed!
+msgClosingDB = Closing the database and writing the item cache
+msgClosingWebServer = Closing the web server
 msgLoadingModules = Loading modules
 msgInitializingDB = Initializing database
 msgLoadingItems = Loading items
