*** empty log message ***

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,8 +1,8 @@
 #
-#Sun Dec 28 12:09:58 CET 2008
+#Sun Dec 28 13:25:37 CET 2008
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.logfile.File=D\:/development/projects/datacrow/data/datacrow.log
-log4j.rootLogger=debug, stdout, textpane, logfile
+log4j.appender.logfile.File=D\:/development/projects/datacrow/data/data_crow.log
+log4j.rootLogger=info, textpane, logfile
 log4j.appender.logfile.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
 log4j.appender.textpane=net.datacrow.util.logging.TextPaneAppender
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
