--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,4 @@
+msgLoginNameNotFilled = The login name has been left blank. A user must always have a login name
 msgShutdownComplete = Shutdown has been completed!
 msgClosingDB = Closing the database and writing the item cache
 msgClosingWebServer = Closing the web server
