*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -39,7 +39,8 @@ lblDirectoriesFiles = Directories / Files
 lblFileHashType = File hash type
 lblFileHashMaxFileSize = Create hashes for files smaller than
 lblFileHashing = File Hashing
-lblItemsToMassUpdate = Updating which items?
+lblUpdatingWhichItems = Updating the following items
+lblRenameFilesFor = Rename files for the following items
 lblAllItemsInView = All items currently shown in the view
 lblGoToTheWebApp = Go to the web application
 lblLinkToDetails = Link to details?
@@ -351,6 +352,7 @@ lblRecursiveDir = Recursive directory search
 lblInternetServer = Server
 lblTechnicalInfo = Technical Information
 lblSelectedItemsOnly = Update selected items only
+lblRenameFilesSelectedItems = Only the selected items
 lblToggleToolbarLabelsAction = Toggle Toolbar Labels
 lblBrowserPath = Browser path
 lblNewOrUpdate = Transfer to new item tab
