--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+lblRenameFilesFor = Hernoem bestanden voor
+lblRenameFilesSelectedItems = Geselecteerde items
 sysUserFieldName=Naam
 sysSoftwareFieldScreenshotThree=Schermafbeelding 3
 msgMassUpdateMethodHasNotBeenDefined=Selecteer een online service en/of geef aan bestanden opnieuw te willen verwerken
@@ -18,7 +20,7 @@ sysDirectorFieldUserShortText2=Gebruikersveld - Text kort 2
 lblImportLocalArtSettings=Instelling voor het importeren van lokale afbeeldingen
 sysAudiocd=Audio CDs
 sysBookFieldserviceurl=Service URL
-msgLoadingModules=Laden van de Modules
+msgLoadingModules=Modules worden geladen
 lblFileHashMaxFileSize=Maak hashes voor bestanden kleiner dan
 lblStop=Stop
 sysMusicalbumFieldUserShortText1=Gebruikersveld - Text kort 1
@@ -1483,7 +1485,7 @@ sysMusictrack_stateItemPlural=Statussen
 lblTargetName=Doelnaam
 sysBookFieldModified=Aangepast op
 sysMovieFieldTitle=Titel
-lblItemsToMassUpdate=Update de volgende items
+lblUpdatingWhichItems=Werk de volgende items bij
 sysSuperFieldDaysLoaned=Dagen uitgeleend
 sysStorageMediumPlural=Opslagmedia
 lblItems=Items
