*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1378,7 +1378,7 @@ tpSave=Bewaart alle items
 sysMusicartistFieldLabel=Label
 sysMusictrackFieldFilehash=Bestandshash
 sysBook_categoryFieldID=ID
-lblRestoreModules=Restore Modules
+lblRestoreModules=Modules terugzetten
 sysMovie_stateFieldItem=Item
 lblOpenItem=Open %1
 msgImportStops=Het importeren is voltooid. De resultaten zijn toegevoegd aan de nieuwe items tab.
