*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblRotateRight=Rotate to right
+lblRotateLeft=Rotate to left
 lblHeight=Height
 lblFontAntiAliasing=Font Anti-aliasing
 lblDataReport = Create a data report / export
