*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,9 @@
+lblBrighten=Helder maken
+lblBlur=Wazig maken
+lblSharpen=Sherp maken
+lblGrayscale=Maak grijs
+lblRotateRight=Draai naar rechts
+lblRotateLeft=Draai naar links
 lblRenameFilesFor = Hernoem bestanden voor
 lblRenameFilesSelectedItems = Geselecteerde items
 sysUserFieldName=Naam
