--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,7 @@
+lblBrighten=Brighten
+lblBlur=Blur
+lblSharpen=Sharpen
+lblGrayscale=Grayscale
 lblRotateRight=Rotate to right
 lblRotateLeft=Rotate to left
 lblHeight=Height
