--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
     
         <mkdir dir="_classes/" />
         <javac srcdir="_source/" destdir="_classes/" debug="true">
-          <classpath path="lib/jacksum.jar;lib/avalon-framework-4.2.0.jar;lib/browserlauncher2.jar;lib/commons-io-1.1.jar;lib/commons-logging-1.0.4.jar;lib/jaudtiotagger.jar;lib/hsqldb.jar;lib/imagej_1_39e.jar;lib/jebml.jar;lib/jhall.jar;lib/log4j-1.2.14.jar;lib/metadata-extractor-2.3.1.jar;lib/openchart_1_2.jar;lib/jetty/ant-1.6.5.jar;lib/jetty/core-3.1.1.jar;lib/jetty/jetty-6.1.14.jar;lib/jetty/jetty-util-6.1.14.jar;lib/jetty/jsp-2.1.jar;lib/jetty/jsp-api-2.1.jar;lib/jetty/servlet-api-2.5-6.1.14.jar;lib/laf/jtattoo.jar;lib/laf/skinlf.jar;lib/xml/batik-all-1.6.jar;lib/xml/fop.jar;lib/xml/serializer-2.7.0.jar;lib/xml/xalan-2.7.0.jar;lib/xml/xercesImpl-2.7.1.jar;lib/xml/xml-apis-1.3.02.jar;lib/xml/xmlgraphics-commons-1.1.jar;lib/xml/xsltc.jar;lib/html/cobra.jar;lib/html/js.jar" />
+          <classpath path="lib/jacksum.jar;lib/avalon-framework-4.2.0.jar;lib/browserlauncher2.jar;lib/commons-io-1.1.jar;lib/commons-logging-1.0.4.jar;lib/jaudtiotagger.jar;lib/hsqldb.jar;lib/jebml.jar;lib/jhall.jar;lib/log4j-1.2.14.jar;lib/metadata-extractor-2.3.1.jar;lib/openchart_1_2.jar;lib/jetty/ant-1.6.5.jar;lib/jetty/core-3.1.1.jar;lib/jetty/jetty-6.1.14.jar;lib/jetty/jetty-util-6.1.14.jar;lib/jetty/jsp-2.1.jar;lib/jetty/jsp-api-2.1.jar;lib/jetty/servlet-api-2.5-6.1.14.jar;lib/laf/jtattoo.jar;lib/laf/skinlf.jar;lib/xml/batik-all-1.6.jar;lib/xml/fop.jar;lib/xml/serializer-2.7.0.jar;lib/xml/xalan-2.7.0.jar;lib/xml/xercesImpl-2.7.1.jar;lib/xml/xml-apis-1.3.02.jar;lib/xml/xmlgraphics-commons-1.1.jar;lib/xml/xsltc.jar;lib/html/cobra.jar;lib/html/js.jar" />
         </javac>
         
         <copy todir="_classes/">
