--- a/log4j.properties
+++ b/log4j.properties
@@ -1,14 +1,14 @@
 #
-#Fri Jan 02 15:40:41 CET 2009
+#Fri Jan 02 17:07:36 CET 2009
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.logfile.File=G\:/Development/projects/datacrow/data/data_crow.log
+log4j.appender.logfile.File=D\:/development/projects/datacrow/data/data_crow.log
 log4j.rootLogger=info, textpane, logfile
 log4j.appender.logfile.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
 log4j.appender.textpane=net.datacrow.util.logging.TextPaneAppender
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
 log4j.appender.textpane.layout=org.apache.log4j.PatternLayout
-log4j.appender.logfile.MaxFileSize=500KB
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.logfile.MaxFileSize=500KB
 log4j.appender.logfile.MaxBackupIndex=1
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
