*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,12 @@
+lblSelectRelatedItems=Select related items
+lblUploadImage=Upload Image
+lblCreateNew=Create New
+lblAdvancedFind=Advanced Find
+lblAdvanced=Advanced
+lblWelcome=Welcome
+lblLogoff=Log off
+lblUsername=Username
+lblAndOr=And/Or
 lblOpenFromClipboard=Open From Memory
 lblPictureViewer=Picture Viewer
 lblBrighten=Brighten
@@ -240,6 +249,7 @@ lblTipsOfTheDay = Tips of the Day
 lblTipOfTheDay = Tip of the Day
 lblShowTipsOnStartup = Show tips on startup
 lblWords = Words
+lblShow = Show
 lblTemplateX = Template %1
 lblManageX = Maintain %1
 lblManage = Maintain
@@ -490,3 +500,4 @@ lblShowTableTooltips = Show tooltips for tables
 lblEncoding = Encoding
 lblPictureViewer = Picture viewer
 lblTextViewer = Text viewer
+lblTableName = Table name
