*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -7,7 +7,7 @@ lblWelcome=Welcome
 lblLogoff=Log off
 lblUsername=Username
 lblAndOr=And/Or
-lblOpenFromClipboard=Open From Memory
+lblOpenFromClipboard=Add from Memory
 lblPictureViewer=Picture Viewer
 lblBrighten=Brighten
 lblBlur=Blur
@@ -128,8 +128,8 @@ lblRestoreModules = Restore Modules
 lblDecimalGroupingSymbol = Decimal Grouping Symbol
 lblDecimalSeperatorSymbol = Decimal Separator Symbol
 lblImageURL = Image URL
-lblOpenFromFile = Open From File
-lblOpenFromURL = Open From URL
+lblOpenFromFile = Add from File
+lblOpenFromURL = Add from URL
 lblMinutes = Minutes
 lblHours = Hours
 lblSeconds = Seconds
