--- a/log4j.properties
+++ b/log4j.properties
@@ -2,7 +2,7 @@
 #Fri Jan 23 12:26:41 CET 2009
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.logfile.File=D\:/development/projects/datacrow/data/data_crow.log
-log4j.rootLogger=info, textpane, logfile
+log4j.rootLogger=info, textpane, logfile, stdout
 log4j.appender.logfile.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
 log4j.appender.textpane=net.datacrow.util.logging.TextPaneAppender
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
