--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -961,7 +961,7 @@ sysSoftwarepublisherFieldDescription=Omschrijving
 lblDenyModuleAccess=Toegang tot module wijgeren
 msgStartImportJob=Start de import van directorie: %1
 lblOpenFromURL=Open van URL (HTTP)
-lblOpenFromClipboard=Open van geheugen
+lblOpenFromClipboard=Open uit geheugen
 sysMusictrackFieldTitle=Titel
 sysAudiocd_stateFieldItem=Item
 sysContainer_containertypeFieldItem=Item
