*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -387,6 +387,7 @@ lblSystemInformation = System Information
 lblHelp = Help
 lblInformation = Information
 lblAbout = About
+lblDonate = Donate
 lblTargetFile = Target file
 lblOpenReport = Open Report
 lblResults = Show Results
