*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1546,7 +1546,7 @@ sysBook_stateFieldModified=Aangepast op
 sysBookpublisherItemPlural=Uitgevers
 sysMusicartistFieldwebpage=Webpagina
 tpInputFieldHeight=Stelt de hoogte van de invoervelden in.
-msgTransformingOutput=Bezig met het transformeren van het XML bestan naar %1
+msgTransformingOutput=Bezig met het transformeren van het XML bestand naar %1
 sysImage_storagemediumItemPlural=Opslagmedia
 msgEnterFilterValue=Vul een waarde in
 sysMusicartistItem=Artiest
