*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,14 +1,3 @@
-lblDonate=Doneer
-lblTableName=Tabelnaam
-lblAdvanced=Geavanceerd
-lblWelcome=Welkom
-lblLogoff=Afmelden
-lblShow=Tonen
-lblSelectRelatedItems=Selecteer gerelateerde items
-lblUploadImage=Afbeelding ophalen
-lblCreateNew=Toevoegen
-lblAndOr=En / Of
-lblAdvancedFind=Geavanceerd zoeken
 lblPictureViewer=Plaatjes viewer
 lblBrighten=Helder maken
 lblBlur=Wazig maken
@@ -230,7 +219,7 @@ lblDatabaseDriver=Database Driver
 lblGoToTheWebApp=Open de web applicatie
 msgSelectModuleToAlter=Selecteer de module die u zou willen veranderen. Klik op een van de iconen om door te gaan naar de volgende stap.
 0x0036=DigiADPCM
-sysSoftware_categoryItemPlural=Categorieën
+sysSoftware_categoryItemPlural=Categoriën
 sysBookFieldContainer=Container
 lblNextMonth=Volgende maand
 sysImage_stateFieldID=ID
@@ -240,7 +229,7 @@ msgDeletePersonLendItems=Deze persoon heeft in het verleden items geleend. Het v
 sysMovieFieldCountry=Land
 sysAudiocdFieldWebpage=Webpage
 sysAuthorFieldItem=Item
-tpAutoCreateMissingItems=Data Crow gebruikt de door u gedifinieerde categorieën, genres en andere properties. Het kan echter voorkomen dat een zoek resultaat properties heeft die nog niet zijn vastgelegd. Met deze optie worden de missende properties automatisch aangemaakt.
+tpAutoCreateMissingItems=Data Crow gebruikt de door u gedifinieerde categoriën, genres en andere properties. Het kan echter voorkomen dat een zoek resultaat properties heeft die nog niet zijn vastgelegd. Met deze optie worden de missende properties automatisch aangemaakt.
 sysImageFieldContainer=Container
 msgDeleteSuccessfull=De geselecteerde items zijn met succes verwijderd
 lblColumns=%1 Columns
@@ -420,7 +409,7 @@ lblSkinLF=Skin Look & Feel Themes
 sysAudiocdFieldState=Status
 lblFinish=Voltooien
 msgClosingWebServer=De web server wordt afgesloten
-sysPerson_categoryItemPlural=Categorieën
+sysPerson_categoryItemPlural=Categoriën
 sysContainerItem=Container
 0x0400=BTV Digital
 sysSoftwareFieldUserInteger1=Gebruikersveld - Numeriek 1
@@ -636,7 +625,7 @@ sysDeveloperFieldFirstname=Voornaam
 msgEnterKeyword=U moet aangeven waar op gezocht moet worden
 sysSoftwarepublisherFieldPhoto=Foto
 sysAudiocdFieldwebpage=Webpagina
-lblAutoCreateMissingItems=Creëer properties, zoals categorie, en genres automatisch
+lblAutoCreateMissingItems=Creeer properties, zoals categorie, en genres automatisch
 sysDeveloperFieldUserShortText2=Gebruikersveld - Text kort 2
 sysAudiocdItem=Audio CD
 lblCancel=Annuleren
@@ -644,7 +633,7 @@ lblCancel=Annuleren
 msgBookMassUpdateHelp=Werkt de boekgegevens bij met informatie gevonden met behulp van een online service. Hiervoor moet er een perfecte match worden gevonden op het ISBN of op de titel.
 sysBook_stateFieldCreated=Aangemaakt op
 sysBook_stateFieldName=Naam
-lblValue=Waarde
+lblValue=Value
 lblVertical=Verticaal
 sysMusicartist=Artiesten
 lblPreviousMonth=Vorige Maand
@@ -912,7 +901,6 @@ msgAddingToTable=%1 wordt toegevoegd aan de nieuwe items tab
 sysPerson_categoryFieldItem=Item
 msgRestoringFile=%1 wordt teruggezet
 lblValueSeperator=Scheidingsteken
-lblUsername=Gebruikersnaam
 sysMusictrackFieldLabel=Label
 sysBookFieldFilesize=Bestandsgrootte
 msgFieldWithSameNameExists=Er bestaat reeds een veld met dezelfde naam. Kies een andere naam en probeer opnieuw.
@@ -923,7 +911,7 @@ lblMaxTextLength=Maximum Tekst Lengte
 sysBook_storagemediumItemPlural=Opslagmedia
 sysSoftwareFieldEAN=EAN
 msgThereAreOverdueItems=Er zijn items waarvan de uiterste reourdatum is verstreken
-lblField=Veld
+lblField=Field
 sysMovieFieldFps=Fps
 msgCouldNotDeleteModule=De module kan niet worden verwijdered of een van de gerelateerde modules kon niet worden bijgewerkt. De verwijderen is geannuleerd. %1
 sysSoftwarepublisherFieldUserShortText1=Gebruikersveld - Text kort 1
@@ -962,7 +950,6 @@ sysSoftwarepublisherFieldDescription=Omschrijving
 lblDenyModuleAccess=Toegang tot module wijgeren
 msgStartImportJob=Start de import van directorie: %1
 lblOpenFromURL=Open van URL (HTTP)
-lblOpenFromClipboard=Open uit geheugen
 sysMusictrackFieldTitle=Titel
 sysAudiocd_stateFieldItem=Item
 sysContainer_containertypeFieldItem=Item
@@ -1124,7 +1111,7 @@ lblInsertText=Tekst invoegen
 sysDirectorFieldFirstname=Voornaam
 0x0002=Microsoft ADPCM Format
 0x0086=DF GSM610
-sysMovieFieldAudioLanguage=Taal
+sysMovieFieldAudioLanguage=Audio Language
 lblRecursiveDir=Zoek ook in sub directories
 0x0100=Rhetorex ADPCM
 sysMovie_genreFieldIcon=Icoon
@@ -1459,7 +1446,7 @@ msgProgramAlreadyDefined=Er is al een programma gedefinieerd voor dit bestandsty
 lblSearchOpts=Zoek opties
 sysSoftwareFieldAvailable=Beschikbaar
 sysDeveloperFieldName=Naam
-tip6=U kunt de standaard set aan statussen, Categorieën, .., beheren vanuit het beheer menu.
+tip6=U kunt de standaard set aan statussen, categoriën, .., beheren vanuit het beheer menu.
 sysImageFieldTitle=Titel
 sysDeveloperFieldUserInteger1=Gebruikersveld - Numeriek 1
 sysBook_stateFieldLabel=Label
@@ -1470,7 +1457,7 @@ lblSecond=2de
 lblCollapseAll=Alle inklappen
 sysImage_stateItem=Status
 sysBook_categoryFieldIcon=Icoon
-sysBook=Boeken
+sysBook=Books
 sysPermissionFieldModified=Aangepast op
 sysMusictrackFieldFilehashType=Bestandshash Type
 sysSoftwareFieldScreenshotOne=Schermafbeelding 1
@@ -1513,7 +1500,7 @@ sysPermissionFieldItem=Item
 lblUndoSearch=Huidige filter de-activeren
 sysDeveloperFieldserviceurl=Service URL
 lblUseDirAsArtistName=Gebruik directory naam als de artiest naam
-sysMovie=Films
+sysMovie=Film
 lblToggleGroupingPane=(De-) Activeer Groepeer Paneel
 lblPerformanceTweaking=Performance Tweaking
 sysSoftwareFieldItem=Item
@@ -1523,7 +1510,7 @@ lblHTTPSettings=HTTP Instellingen
 msgDeleteModuleConfirmation=Weet u zeker dat u de module en alles wat deze module bevat wilt verwijderen?
 sysSoftware_categoryItem=Categorie
 lblDescription=Omschrijving
-sysBook_categoryItemPlural=Categorieën
+sysBook_categoryItemPlural=Categoriën
 lblXmlReport=XML report
 sysMovie_storagemediumFieldID=ID
 lblRestartNumbering=Herstart nummering
@@ -1546,7 +1533,7 @@ sysBook_stateFieldModified=Aangepast op
 sysBookpublisherItemPlural=Uitgevers
 sysMusicartistFieldwebpage=Webpagina
 tpInputFieldHeight=Stelt de hoogte van de invoervelden in.
-msgTransformingOutput=Bezig met het transformeren van het XML bestand naar %1
+msgTransformingOutput=Bezig met het transformeren van het XML bestan naar %1
 sysImage_storagemediumItemPlural=Opslagmedia
 msgEnterFilterValue=Vul een waarde in
 sysMusicartistItem=Artiest
@@ -1735,7 +1722,7 @@ msgJobAlreadyRunning=Er zijn al taken actief!
 sysActorFieldLabel=Label
 sysAudiocd_stateItem=Status
 lblModuleAlterWizard=Module Aanpassen Wizard
-sysImage_categoryItemPlural=Categorieën
+sysImage_categoryItemPlural=Categoriën
 sysImage_categoryFieldItem=Item
 msgMusicFileMassUpdateHelp=Werkt muziek albums bij met information van de muziek bestanden. De bestandsnaam van de track wordt gebruikt om het bestand te vinden.
 msgFileNotFound=Kan bestand %1 niet vinden. Nieuw bestand wordt aangemaakt.
