*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,5 @@
+lblAvailableFields=Available Fields
+lblSelectedFields=Selected Fields
 lblSelectRelatedItems=Select related items
 lblUploadImage=Upload Image
 lblCreateNew=Create New
