--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,5 @@
+msgTabDeleteNoRowSelected = Selecteer eerst een tab van de tabel
+lblItemFormSettings=Formulier Instellingen
 sysUserFieldName=Naam
 sysSoftwareFieldScreenshotThree=Schermafbeelding 3
 msgMassUpdateMethodHasNotBeenDefined=Selecteer een online service en/of geef aan bestanden opnieuw te willen verwerken
